--- a/src/App.css
+++ b/src/App.css
@@ -1,78 +1,151 @@
 /*-----------Imports----------*/
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
 
-body{
+body {
   margin: 0;
 }
-/*-----------Header----------*/
+/*-----------Header / inside pages ----------*/
 #header-container {
-  display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  justify-items: flex-end;
+  align-items: baseline;
   width: 95vw;
-  margin-left: 25px;
-  /* background-color: purple; */
-  font-family: 'Pacifico', cursive;
+  height: 30vh;
+  border-bottom: 2px solid black;
+  font-family: "Pacifico", cursive;
+}
+#headerBackground {
+  position: absolute;
+  width: 95vw;
+  height: 30vh;
+  z-index: -3;
+  background-color: coral;
 }
 
 #page-nav {
   display: flex;
-  flex-direction: row;
-  align-content: baseline;
-  width: 60vw;
-  margin-left: 300px;
-  margin-top: -115px;
-  margin-bottom: 200px;
+  justify-content: flex-end;
   justify-content: space-around;
-  /* background-color: chartreuse;  */
-}
+  width: 100vw;
+  height: 30vh;
+ }
 
 #header-links {
   text-decoration: none;
   color: black;
 }
-#resume{
-  display: flex;
-  flex-direction: column;
+ 
+#home-link {
+  height: 20vh;
   width: 100vw;
+  bottom: 10px;
+}
+
+#resume {
+  flex-direction: column;
+  display: contents;
+  align-items: center;
+  width: 100vw;
+  height: auto;
   margin-left: 20px;
 }
-#about{
+
+#subtitle {
   display: flex;
- justify-content: center;
-  width: 100vw;
-  /* background-color: bisque; */
-}
-#subtitle{
-  display: flex;
- justify-content: end;
- 
- margin-left: 80px;
-  width: 90vw;
-  /* background-color: chocolate; */
-}
-#regen{
+  align-items: baseline;
+  justify-content: end;
+  margin-left: 20px;
+  width: 95vw;
+  height: 25vh;
+ }
+
+#regen {
   margin-left: 40px;
   margin-right: 40px;
-  background-color: azure;
+  background-color: yellowgreen;
 }
+
+/* ------------ Pages ---------------- */
+#storyline {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 95vw;
+  height: auto;
+}
+#services{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 95vw;
+  height: auto;
+}
+#resumeContainer {
+  display: flex;
+  flex-direction: column;
+  width: 95vw;
+}
+
+#project {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 95vw;
+  border-bottom: 2px solid black;
+  margin-bottom: 15px;
+}
+
+/* --------------- Photos / Video ------------------ */
+#photo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 45vh;
+  width: 95vw;
+  margin-left: 27px;
+  margin-right: 19px;
+}
+
+#photoAlone {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 45vh;
+  width: 95vw;
+}
+
+#photoTwo {
+  width: 35vw;
+  height: 45vh;
+  margin-top: 230px;
+  z-index: -5;
+}
+
+/* #photoBox {
+  z-index: -5;
+} */
+
+#footBoard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 50vh;
+  width: 35vw;
+  margin-left: 25px;
+  padding-right: 15px;
+  padding-top: 15px;
+}
+
+#myvideo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+ }
+
 .Video {
   flex-direction: column;
   align-self: flex-end;
   width: 40vw;
 }
-#project{
-  display: flex;
-  flex-direction: column;
-  width: 95vw;
-  margin-left: 20px;
-}
-#myvideo{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  /* background-color: blue; */
-}
-#home{
-  /* background-color: yellowgreen; */
-}
+
+/* ------------------ footers -------------------------- */
